src/client/views/components/Plot.scss
@import 'colors';

.outer {
  position:relative;
  top:0;
  height: 100%;
  width: 100%;
  max-width: calc(100vh - 2em);
  margin:0 auto;
  display: flex;
  flex-direction: column;
}

svg text {
  font-family:sans-serif;
}

.main_plot {
  // height:100%;
  // width:100%;
  pointer-events:none;

  .bold_path {
    stroke-width:5;
    opacity:1;
  }

  .axis_path {
    stroke-width:3;
    opacity:1;
  }

  .fine_path {
    stroke-width:1;
    opacity:1;
  }

  .axis_label {
    font-family:sans-serif;
    font-size:1.5em;
  }

  rect {
    // stroke:currentColor;
    // fill:currentColor;
    stroke-width:3;
    box-sizing: border-box;
  }

  polygon {
    // stroke:currentColor;
    // fill:currentColor;
    stroke-width:3;
    box-sizing: border-box;
  }

  .plot_boundary {
    stroke:$darkColor;
    stroke-width:2;
    fill:rgba($lightColor,0);
    cursor: pointer;
    pointer-events: auto;
  }

  .axis_title {
    font-family:sans-serif;
    text-anchor:middle;
    font-size:2em;
  }

  .small_axis_title {
    font-family:sans-serif;
    text-anchor:middle;
    font-size:1.5em;
  }

  .plot_title {
    font-family:sans-serif;
    font-size:1.5em;
    dominant-baseline: hanging;
  }

  .snail_plot_title {
    font-family:sans-serif;
    text-anchor:middle;
    font-size:36px;
  }

  .legend {
    font-family:sans-serif;
  }

  .horiz_legend {
    font-family:sans-serif;
    font-size:0.8em;
  }

  .legend_title {
    font-family:sans-serif;
    font-size:1.5em;
  }

  .snail_legend {
    font-family:sans-serif;
    font-size:16.8px;
  }

  .snail_legend_title {
    font-family:sans-serif;
    font-size:28px;
  }


}

input.scale {
  height: 25px;
  border: 2px solid black;
  font-size: 1.2em;
  z-index:10;
  pointer-events: auto;
}

span.download {
  position:absolute;
  display:block;
  right:0;
  top:0;
  .save_svg {
    position:relative;
    display:inline-block;
    right:0;
    background-color: rgba($lightColor,0.8);
    color:$highlightColor;
    margin-right: 0.5em;
    font-size: 0.8em;
    cursor:pointer;
  }
}

div.download, div.download_all {
  position:absolute;
  display:flex;
  align-items: center;
  justify-content: flex-end;
  margin-top:-5em;
  margin-left: 10em;
  .save_svg {
    position:relative;
    display:inline-block;
    right:0;
    background-color: rgba($lightColor,0.8);
    color:$highlightColor;
    margin-right: 0.5em;
    font-size: 0.8em;
    cursor:pointer;
  }
}

div.download_all {
  margin:0;
  justify-content: flex-start;
  .save_svg {
    left:0;
  }
}


.save_csv {
  margin-top:0.5em;
  text-align:center;
}



.fill_parent {
  // position:absolute;
  // top:0;
  // left:0;
  max-height:100%;
  // min-height:calc(100% - 6em);
  min-width: 100%;
  min-height: 0;
  display: flex;
  flex: 1 1 100%;
}

.busco_fill_parent {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

.main_canvas {
  position: fixed;
  top:0;
  left:0;
}


.axis_title {
  width:50em;
  height:3em;
  text-align:center;
  position: absolute;
  background-color:$lightColor;

  h2 {
    margin:0;
    line-height: 3em;
  }

}

.y_axis_plot {
  width: 50em;
  height: 15em;
  position: absolute;
  top: calc(0em - 2px);
  right: 0;
  background-color: $lightColor;
  transform: translateY(35em) rotate(90deg);
  transform-origin: bottom right;
  border:2px solid $shadeColor;
  box-sizing: border-box;
  overflow:hidden;
}

.x_axis_plot {
  width: 50em;
  height: 15em;
  position: absolute;
  top: -15em;
  left: -2px;
  background-color: $lightColor;
  border:2px solid $shadeColor;
  box-sizing: border-box;
  overflow:hidden;
}

.side_bins {
  fill:currentColor;
  stroke:currentColor;
  stroke-width:2px;
  opacity:0.75;

}

.flip_horiz {
  transform: scaleX(-1);
}

.bottom_axis_title {
  height:6em;
  top:54em;
  left:-2px;

  span {
    display:inline-block;
    padding:0.2em;
    margin:0.2em;
    cursor:pointer;
  }

  // span:hover {
  //   background-color:rgba($highlightColor,0.5);
  // }
  .active {
    background-color:$highlightColor;
    color:$lightColor;
  }
  h2 {
    margin:0;
    line-height: 2em;
  }
}

.x_axis_title {
  bottom:calc( -3em - 2px );
  left:-2px;
}

.y_axis_title {
  transform: rotate(90deg);
  transform-origin: top left;
  left: -2px;
  top: -2px;
}

.layer_tab_holder {
  position: absolute;
  right: 0;
  top: 0;
  height: auto;
  width: 3em;
  z-index:20;
}

.layer_tab {
  width:3em;
  height:2em;
  text-align: right;

  .legend {
    width:auto;
    min-width:3em;
    background-color: $lightColor;
    height: 2em;
    right: 0;
    line-height: 2em;
    margin-right: 3.5em;
    position: absolute;
  }
}

.transform_line {
  stroke: rgba($highlightColor,0.25);
  stroke-width: 0.5px;
  fill:none;
}

.centered_content {
  display:flex;
  align-items: center;
  justify-content: center;
  position: absolute;
}

.static_image {
  max-height:100%;
  max-width:100%;
  width:100%;
  object-fit: contain;
  object-position: center;
}

.clamped_divider {
  stroke: rgba($deepColor,0.5);
  stroke-width: 3px;
  stroke-dasharray: 5;
}

.modal_plot_outer {
  position:relative;
  top: 0;
  height: 325px;
  width: 1000px;
  max-height: 70vh;
  max-width: 70vw;
  margin:0 auto;
  cursor:default;

  .plot_boundary {
    cursor:default;
  }

}

.link_info {
  text {
    font-family:sans-serif;
    font-size:1em;
    dominant-baseline: hanging;
    text-anchor:middle;
    fill: $lightColor;
  }

  rect {
    fill: $darkColor;
  }


}

